fix: 접근성 정보 등록 모달에서 z-index가 터무니 없이 높은 문제 수정

--- a/src/css/registerModal.css
+++ b/src/css/registerModal.css
@@ -5,7 +5,7 @@
   width: 100%;
   height: 100%;
   overflow: auto;
-  z-index: 991;
+  z-index: 901;
   display: flex;
   justify-content: center;
 }
